Se arreglaron errores generales

--- a/Frontend/Agricultor/Analisis_de_riego/riego.html
+++ b/Frontend/Agricultor/Analisis_de_riego/riego.html
@@ -7,7 +7,7 @@
   <img style="width: 1597.01px; height: 674px; left: 0px; top: 230px; position: absolute" src="imagenes/imagen-cultivo.JPG" />
   
   <!-- CONTENIDO PRINCIPAL DE ANÁLISIS -->
-<div style="position: absolute; top: 950px; left: 60px; width: 90%;">
+  <div style="position: absolute; top: 950px; left: 60px; width: 90%;">
   <!-- Selector de parcela -->
   <select id="selector-parcela" style="font-family: 'IBM Plex Mono'; font-size: 18px; padding: 8px; margin-bottom: 20px;">
     <option selected disabled>Seleccione una parcela...</option>
@@ -18,7 +18,7 @@
 
   <!-- Gráfico -->
   <canvas id="grafico-riego" width="600" height="300"></canvas>
-</div>
+  </div>
   <div style="width: 223px; height: 72px; left: 1270px; top: 39px; position: absolute; background: #588157; border-radius: 28px"></div>
   <img style="width: 37px; height: 37px; left: 1287px; top: 56px; position: absolute" src="imagenes/avatar.png" />
   <div id="nombre-usuario-agricultor" style="width: 127px; height: 45px; left: 1336px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Agricultor</div>
@@ -30,29 +30,38 @@
     }
   </script>
 
-  <!-- 
-  Menú desplegable oculto 
-  -->
-  <div id="menuOpciones" style="display: none; width: 203px; position: absolute; top: 120px; left: 1270px; background: #344E41; border-radius: 10px; padding: 10px;">
-    <a href="/Frontend/Inicio_de_sesion/Inicio/inicio.html"
-      style="display: flex; justify-content: center; color: white; text-decoration: none; font-family: IBM Plex Mono; font-weight: 550; font-size: 18px;">
+  <!-- Menú desplegable oculto -->
+  <div id="menuOpciones"
+      style="display: none; width: 203px; position: absolute;
+              top: 120px; left: 1270px; background: #344E41;
+              border-radius: 10px; padding: 10px;">
+    <a id="logoutLink"
+      href="/Frontend/Inicio_de_sesion/Inicio/inicio.html"
+      style="display: flex; justify-content: center; color: white;
+              text-decoration: none; font-family: IBM Plex Mono;
+              font-weight: 550; font-size: 18px;">
       Cerrar sesión
     </a>
   </div>
 
-  <script>
-    // Mostrar/ocultar menú al hacer clic en el avatar o nombre
-    const avatar = document.querySelector('img[src="imagenes/avatar.png"]');
-    const nombreUsuario = document.getElementById("nombre-usuario-agricultor");
-    const menu = document.getElementById("menuOpciones");
+    <script>
+      const avatar = document.querySelector('img[src="imagenes/avatar.png"]');
+      const nombreUsuario = document.getElementById("nombre-usuario-agricultor");
+      const menu = document.getElementById("menuOpciones");
+      const logoutLink = document.getElementById("logoutLink");
 
-    function toggleMenu() {
-      menu.style.display = (menu.style.display === "none" || menu.style.display === "") ? "block" : "none";
-    }
+      // Alternar visibilidad del menú
+      function toggleMenu() {
+        menu.style.display = (menu.style.display === "none" || menu.style.display === "") ? "block" : "none";
+      }
+      avatar.addEventListener("click", toggleMenu);
+      nombreUsuario.addEventListener("click", toggleMenu);
 
-    avatar.addEventListener("click", toggleMenu);
-    nombreUsuario.addEventListener("click", toggleMenu);
-  </script>
+      // Al cerrar sesión, limpiar storage y permitir navegación
+      logoutLink.addEventListener("click", () => {
+        localStorage.clear();
+      });
+    </script>
 
   <!-- --------------------------------
       Notificaciones emergentes
