--- a/Frontend/Agronomo/Analisis_de_datos/analisis.html
+++ b/Frontend/Agronomo/Analisis_de_datos/analisis.html
@@ -13,28 +13,36 @@
   }
   </script>
 
-  <!-- 
-  Menú desplegable oculto 
-  -->
-  <div id="menuOpciones" style="display: none; width: 203px; position: absolute; top: 120px; left: 1270px; background: #344E41; border-radius: 10px; padding: 10px;">
-    <a href="/Frontend/Inicio_de_sesion/Inicio/inicio.html"
-      style="display: flex; justify-content: center; color: white; text-decoration: none; font-family: IBM Plex Mono; font-weight: 550; font-size: 18px;">
+  <!-- Menú desplegable oculto -->
+  <div id="menuOpciones"
+      style="display: none; width: 203px; position: absolute;
+              top: 120px; left: 1270px; background: #344E41;
+              border-radius: 10px; padding: 10px;">
+    <a id="logoutLink"
+      href="/Frontend/Inicio_de_sesion/Inicio/inicio.html"
+      style="display: flex; justify-content: center; color: white;
+              text-decoration: none; font-family: IBM Plex Mono;
+              font-weight: 550; font-size: 18px;">
       Cerrar sesión
     </a>
   </div>
 
   <script>
-    // Mostrar/ocultar menú al hacer clic en el avatar o nombre
     const avatar = document.querySelector('img[src="imagenes/avatar.png"]');
     const nombreUsuario = document.getElementById("nombre-usuario-agronomo");
     const menu = document.getElementById("menuOpciones");
+    const logoutLink = document.getElementById("logoutLink");
 
     function toggleMenu() {
       menu.style.display = (menu.style.display === "none" || menu.style.display === "") ? "block" : "none";
     }
-
     avatar.addEventListener("click", toggleMenu);
     nombreUsuario.addEventListener("click", toggleMenu);
+
+    // Al cerrar sesión, limpiar storage y permitir navegación
+    logoutLink.addEventListener("click", () => {
+      localStorage.clear();
+    });
   </script>
 
 
@@ -89,7 +97,7 @@
     <!-- Fila 1: Temperatura y Humedad -->
     <div style="display: flex; justify-content: space-between; gap: 20px; margin-top: 20px;">
       <div style="flex: 1;">
-        <h3 style="font-family: IBM Plex Mono; font-size: 20px; color: #344E41;">Temperatura Promedio</h3>
+        <h3 style="font-family: IBM Plex Mono; font-size: 20px; color: #344E41;">Temperatura</h3>
         <canvas id="graficoTemperatura" width="400" height="250"></canvas>
       </div>
       <div style="flex: 1;">
